Laid out inputs

--- a/index.html
+++ b/index.html
@@ -11,9 +11,26 @@
   </head>
   <body>
     <div class="sign-up-form">
-      <!----------------------
-    Add your markup here
-    ------------------------>
+      <form action="">
+        <label for="firstName">First Name</label><br />
+        <input type="text" id="firstName" /><br />
+        <label for="lastName">Last Name</label>
+        <br />
+        <input type="text" id="firstName" />
+        <br />
+        <label for="email">Email</label>
+        <br />
+        <input type="" id="email" />
+        <br />
+        <label for="password">Password</label>
+        <br />
+        <input type="password" id="password" />
+        <br />
+        <label for="passwordConfirmation">Password Confirmation</label>
+        <br />
+        <input type="password" id="passwordConfirmation" />
+        <br />
+      </form>
     </div>
     <script>
       /* --------------------
