--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <title>Sign up form</title>
     <style>
-      /* --------------------
-     Add your styling here
-     -------------------- */
+      .invalid {
+        border: 2px dashed red;
+      }
     </style>
   </head>
   <body>
-    <div class="sign-up-form">
-      <form action="">
+    <div id="sign-up-form">
+      <form id="signUpForm">
         <label for="firstName">First Name</label><br />
         <input type="text" id="firstName" /><br />
         <label for="lastName">Last Name</label>
         <br />
-        <input type="text" id="firstName" />
+        <input type="text" id="lastName" />
         <br />
         <label for="email">Email</label>
         <br />
-        <input type="" id="email" />
+        <input required type="email" id="email" />
         <br />
         <label for="password">Password</label>
         <br />
@@ -30,12 +30,27 @@
         <br />
         <input type="password" id="passwordConfirmation" />
         <br />
+        <input id="submit" type="submit" value="Submit" />
       </form>
+      <h2 id="thankMessage" hidden>Thank you for submitting the form.</h2>
     </div>
     <script>
-      /* --------------------
-     Add your code here
-    --------------------- */
+      const signUpForm = document.getElementById("signUpForm");
+      const emailElement = document.getElementById("email");
+      signUpForm.onsubmit = handleFormSubmit;
+      emailElement.oninvalid = handleInvalid;
+
+      function handleFormSubmit(event) {
+        event.preventDefault();
+        email.classList.remove("invalid");
+        document.getElementById("thankMessage").removeAttribute("hidden");
+      }
+
+      function handleInvalid(event) {
+        event.preventDefault();
+        const emailElement = document.getElementById("email");
+        emailElement.classList.add("invalid");
+      }
     </script>
   </body>
 </html>
